--- a/index.html
+++ b/index.html
@@ -3,45 +3,23 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Coding Portfolio</title>
+  <title>DSA Portfolio</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header>
-    <h1>My Coding Portfolio</h1>
-    <nav>
-      <ul>
-        <li><a href="#doomsday">Doomsday</a></li>
-        <li><a href="#sorting">Sorting</a></li>
-        <li><a href="#misc">Miscellaneous</a></li>
-      </ul>
-    </nav>
+    <h1>DSA</h1>
   </header>
   <main>
-    <section id="doomsday">
-      <h2>Doomsday</h2>
-      <ul>
-        <li><a href="Doomsday/Sep8thDoomsday.py">Sep8thDoomsday.py</a></li>
-      </ul>
-    </section>
-    <section id="sorting">
-      <h2>Sorting</h2>
-      <ul>
-        <li><a href="Sorting/Ternary.py">Ternary.py</a></li>
-        <li><a href="Sorting/binary.py">binary.py</a></li>
-      </ul>
-    </section>
-    <section id="misc">
-      <h2>Miscellaneous</h2>
-      <ul>
-        <li><a href="misc/bozosort.py">bozosort.py</a></li>
-        <li><a href="misc/digitizer.py">digitizer.py</a></li>
-      </ul>
-    </section>
+    <div id="folder-structure"></div>
   </main>
   <footer>
-    <p>&copy; 2023 My Coding Portfolio</p>
+    <p>&copy; 2023 DSA Portfolio</p>
   </footer>
+  <script>
+    const GITHUB_USERNAME = 'your-github-username';
+    const REPO_NAME = 'your-repo-name';
+  </script>
   <script src="script.js"></script>
 </body>
 </html>
