--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <p>&copy; 2023 DSA Portfolio</p>
   </footer>
   <script>
-    const GITHUB_USERNAME = 'your-github-username';
-    const REPO_NAME = 'your-repo-name';
+    const GITHUB_USERNAME = 'carterlasalle';
+    const REPO_NAME = 'DSA';
   </script>
   <script src="script.js"></script>
 </body>
