--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>DSA</h1>
+    <h1>DSA Portfolio</h1>
   </header>
   <main>
     <div id="folder-structure"></div>
