--- a/index.html
+++ b/index.html
@@ -8,26 +8,28 @@
   <script src="https://unpkg.com/feather-icons"></script>
 </head>
 <body>
-  <header>
-    <div class="container">
-      <nav>
-        <h1>DSA Portfolio</h1>
-        <button id="theme-toggle" aria-label="Toggle dark mode">
-          <i data-feather="moon"></i>
-        </button>
-      </nav>
-    </div>
-  </header>
-  <main>
-    <div class="container">
-      <div class="folder-structure" id="folder-structure"></div>
-    </div>
-  </main>
-  <footer>
-    <div class="container">
-      <p>&copy; 2023 DSA Portfolio</p>
-    </div>
-  </footer>
+  <div class="page-wrapper">
+    <header>
+      <div class="container">
+        <nav>
+          <h1>DSA Portfolio</h1>
+          <button id="theme-toggle" aria-label="Toggle dark mode">
+            <i data-feather="moon"></i>
+          </button>
+        </nav>
+      </div>
+    </header>
+    <main>
+      <div class="container">
+        <div class="folder-structure" id="folder-structure"></div>
+      </div>
+    </main>
+    <footer>
+      <div class="container">
+        <p>&copy; 2023 DSA Portfolio</p>
+      </div>
+    </footer>
+  </div>
   <script>
     window.GITHUB_USERNAME = 'carterlasalle';
     window.REPO_NAME = 'DSA';
